# LevelUp_with_SPNKr

./: .coverage  .cursorrules  .dockerignore  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  ANTI_REGRESSION_SUMMARY.md  BUGFIX_V5_2026-02-15.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Features.md  Playlist_modes_translations.json  README.md  TESTING_TODO.md  TODO.md  To do.txt  activate_env.sh  check_result.txt  db_profiles.json  docker-compose.yml  launcher.py  openspartan_graph.py  openspartan_launcher.py  pyproject.toml  refresh_all_dbs.bat  requirements.txt  run.sh  run_dashboard.bat  run_dashboard.py  streamlit_app.py  test_baseline_s17.txt  test_baseline_v5_final.txt  test_data_access.py  test_output.txt
.ai/: ADVANCED_AI_ROADMAP.md  AGENT_ARCHITECTURE.md  API_LIMITATIONS.md  ARCHITECTURE_ROADMAP.md  CITATIONS_PAGE_ANALYSIS.md  CODE_REVIEW_CLEANUP_PLAN.md  CONSOLIDATED_AUDITS_AND_ROADMAP.md  DATA_MATCH_RANK.md  DATA_SESSIONS.md  FILTER_PERSISTENCE_FIX_PLAN.md  MCP_CONFIG.md  P9_FRIENDS_IMPACT_HEATMAP.md  P9_FRIENDS_IMPACT_HEATMAP_V2.md  PLAN_DETAIL_STATS_NOUVELLES.md  PLAN_UNIFIE.md  PLAN_V5_SHARED_MATCHES.md  RELEASE_NOTES_2026_Q1.md  SPRINT_EXPLORATION.md  SQLITE_TO_DUCKDB_AUDIT.md  SUPER_PLAN.md  correction_plan_2026-02-02.md  current_plan.md  data_lineage.md  project_map.md  thought_log.md  v5-baseline-audit.json  v5-schemas-export.md
.ai/archive/: BINARY_CHUNK_ANALYSIS_FINAL.md  CODE_REVIEW_CLEANUP_PLAN.md  ORCHESTRATION_PROMPTS.md  SUPER_PLAN.md  thought_log_pre_phase6.md  workflows.md
.ai/diagnostics/: BACKFILL_LOGIC_COMPLETE_ANALYSIS.md  DERNIERE_SESSION_BOUTON_BUG_ANALYSIS.md  DERNIER_MATCH_PROBLEMES_2026-02-05.md  FIRST_KILL_DEATH_DIAGNOSTIC_JGTM.md  FIX_DUPLICATE_KEYS_2026-02-05.md  GRAPHE_KILLER_VICTIM_STACKED_PLAN.md  MEDIA_LIBRARY_ANALYSIS_2026-02-04.md  README.md  REGRESSIONS_ANALYSIS_2026-02-03.md
.ai/explore/: CRITICAL_DATA_MISSING_EXPLORATION.md  PROJECT_EXPLORE_2026-02-05.md  README.md
.ai/features/: API_COMPARISON_SPNKR_GRUNT.md  COMBINED_IMPLEMENTATION_PLAN.md  GRAPHE_DERNIER_MATCH_FRAGS_PARFAITS_PLAN.md  MEDIA_CAPTURES_PER_PLAYER_PLAN.md  MEDIA_INDEXING_OPTIMIZATION.md  MEDIA_TAB_IMPLEMENTATION_PLAN.md  PARTICIPANTS_DAMAGE_PLAN.md  RADAR_PARTICIPATION_UNIFIE_PLAN.md  README.md  cleanup_agent.md  data_storage.md  ingestion_scripts.md  query_engine.md  spnkr_integration.md  stats_engine.md  test_agent.md  ui_streamlit.md
.ai/references/: README.md
.ai/reports/: README.md  V4_5_BASELINE.md  V4_5_BENCHMARK_COMPARISON.md  V4_5_LEGACY_AUDIT_S16.md  V4_5_LEGACY_AUDIT_S17.md  V4_5_MIGRATION_PANDAS_WAVE_A.md  V4_5_PANDAS_FRONTIER_MAP.md  V4_5_POST_OPTIM_PERF_S19.md  benchmark_baseline_pre_s16.json  benchmark_v1.json  benchmark_v4_5_post_migration.json  benchmark_v4_5_post_s19.json
.ai/research/: 10_EXAMPLES_THEATRE_MODE.md  API_REFDATA_FIELDS.md  BINARY_CHUNK_ANALYSIS_PLAN.md  KILL_FEED_NEXT_STEPS.md  (+4 more)
.claude/: settings.json  settings.local.json
.cursor/: mcp.json
.github/: copilot-instructions.md
.streamlit/: friends_defaults.json
data/: Playlist_modes_translations.json
docs/: ARCHITECTURE.md  ARCHITECTURE_V5.md  BACKUP_RESTORE.md  CITATIONS.md  CLEANUP_V5.md  CLEANUP_V5_QUICKSTART.md  COMMANDS.md  CONFIGURATION.md  DATA_ARCHITECTURE.md  FAQ.md  FILTER_PERSISTENCE.md  INSTALL.md  METADATA_RESOLUTION.md  MIGRATION_REFDATA.md  MIGRATION_V4_TO_V5.md  PERFORMANCE_SCORE.md  POLARS_MIGRATION.md  QUERY_EXAMPLES.md  SHARED_MATCHES_SCHEMA.md  SQL_SCHEMA.md  SYNC_GUIDE.md  SYNC_OPTIMIZATIONS_V5.md  TESTING_V5.md  THUMBNAILS_WATCHER.md
scripts/: .cursorrules  add_friend.py  analyze_chunk_with_hexdump.py  analyze_citations_awards_alignment.py  analyze_match_overlap.py  archive_season.py  audit_current_data.py  backfill_data.py  backfill_killer_victim_pairs.py  backfill_match_data.py  backfill_medals.py  backfill_metadata.py  backfill_null_metadata.py  backfill_personal_score_awards.py  backfill_teammates_signature.py  backup_player.py  benchmark_hybrid.py  benchmark_pages.py  benchmark_v4_vs_v5.py  check_coverage_threshold.py  check_env.py  check_imports.py  check_map_waypoint_merge.py  check_service_record.py  cleanup_codebase.py  cleanup_player_dbs_v5.py  cleanup_rank_from_player_assets.py  compute_sessions.py  correlate_kills.py  count_citations_simple.py  count_displayed_citations.py  create_citation_mappings_table.py  create_match_citations_table.py  demo_regression_detection.py  diagnose_citations.py  diagnose_metadata_resolution.py  diagnose_null_metadata.py  diagnose_player_db.py  docker_init.sh  export_map_waypoint_links.py  (+46 more)
src/: __init__.py  config.py  models.py
static/: styles.css
tests/: .cursorrules  __init__.py  conftest.py  test_analysis.py  test_antagonists_persistence.py  test_app_sidebar.py  test_arrow_polars_bridge.py  test_backfill_bitmask.py  test_backfill_citations.py  test_backfill_cli.py  test_backfill_core.py  test_backfill_detection.py  test_backfill_orchestrator.py  test_backfill_performance_score.py  test_backfill_strategies.py  test_batch_insert.py  test_cache_duckdb_regressions.py  test_cache_integrity.py  test_cache_optimization.py  test_career_medals_aliases.py  test_career_page.py  test_career_ranks_translation.py  test_citation_engine.py  test_commendations.py  test_commendations_ui.py  test_config_db_path.py  test_connection_duckdb.py  test_cross_page_filter_persistence.py  test_data_architecture.py  test_data_contract_assets_aliases.py  test_data_contract_medals.py  test_data_contract_participants.py  test_data_contract_performance_metrics.py  test_data_contract_sessions.py  test_data_contract_shots_accuracy.py  test_data_services_contracts.py  test_data_validation_regressions.py  test_delta_sync.py  test_duckdb_repo_regressions.py  test_duckdb_repository.py  (+95 more)
(+423 files in other folders)
